--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
             rel="shortcut icon"
             type="image/png"
             sizes="32x32"
-            href="images/favicon-32x32.png"
+            href="./dist/images/favicon-32x32.png"
         />
 
         <title>Frontend Mentor | Calculator app</title>
 
         <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="./dist/css/style.css" />
     </head>
     <body class="theme-dark">
         <main>
@@ -99,6 +99,6 @@
                 >. Coded by <a href="#">William Hexberg</a>.
             </div>
         </main>
-        <script src="./js/index.min.js"></script>
+        <script src="./dist/js/index.min.js"></script>
     </body>
 </html>
